--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand" href="index.html">Ferryman</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -41,12 +41,15 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
+          <!-- NOTE BLOG is linked to blog.html-->
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
+      <!-- This is if we want a another link?
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+      -->
         </ul>
       </div>
     </div>
