Added Week 1 & 2 of blog

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Ferryman</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,6 +71,7 @@
   </header>
 
   <!-- Main Content -->
+  <h2>All our Members have no plans in leaving overseas anytime within this 6 months.</h2>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto" id="ZhengHao">
@@ -98,6 +99,13 @@
         <h3>Lee Jun Da</h3>
         <h6>jdlee005@mymail.sim.edu.sg</h6>
         <h6>6096906/10192948</h6>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto" id="Weekiat" align="right">
+        <h3>Ong Wee Kiat</h3>
+        <h6>wkong008@mymail.sim.edu.sg</h6>
+        <h6>5919058/10189060</h6>
       </div>
     </div>
   </div>
