--- a/about.html
+++ b/about.html
@@ -71,7 +71,9 @@
   </header>
 
   <!-- Main Content -->
-  <h2>All our Members have no plans in leaving overseas anytime within this 6 months.</h2>
+  <h2 align="center">All our Members have no plans in leaving overseas</h2>
+  <h2 align="center">anytime within this 6 months.</h2>
+  <br>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto" id="ZhengHao">
@@ -102,7 +104,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto" id="Weekiat" align="right">
+      <div class="col-lg-8 col-md-10 mx-auto" id="Weekiat" align="left">
         <h3>Ong Wee Kiat</h3>
         <h6>wkong008@mymail.sim.edu.sg</h6>
         <h6>5919058/10189060</h6>
