--- a/week2.html
+++ b/week2.html
@@ -66,7 +66,7 @@
             <span class="meta">Posted by
               <a href="about.html#Weekiat">Wee Kiat</a>
               on 17 April, 2020</p>
-          </div>
+            </div>
         </div>
       </div>
     </div>
@@ -77,36 +77,89 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <h2 class="section-heading">Meeting on Zoom (1PM, 11/04/2020)</h2>
-          <p><b>1PM - Explaining ground rules. (50 Minutes)</b></p>
+          <h2 class="section-heading">Group Meeting On Discord (13/04/2020,8pm)</h2>
+          <p><b> Consolidating Research </b></p>
+          <p> Every team member shared their findings and conclude that the platform will be on a mobile application and will be adding the most important and fundamental features for a ride-hailing application</p>
+          <p><b>Discussed Payment Options(Business model)</b></p>
           <ul>
-            <li>Assign Group leader. Everyone need to acknowledge email.</li>
-            <li>Record meeting minutes. (Project diaries to trace and track every involvement with team members)</li>
-            <li>Create a website for project. (Trace what’s happening in meeting)</li>
-            <li>Individual reflections to be sent every week, individually to lecturer. (Show what we discussed: important aspects, similar topic area, functionalities, research or whichever area) </li>
-            <li>Name, group ID and Time Tracking. This would be considered as the first week. Each reflection needs to have this information. (Submit by Tuesday)</li>
-            <li>What is our background/specific area/intricacies, purely onto this software project.</li>
-            <li>What sets us apart from different groups?</li>
+            <li>Incentives</li>
+            <li>Petrol card</li>
           </ul>
-          <p><b>Why did we choose this topic?</b></p>
-          <p>Carpool concept itself have a lot of potential, both as a business idea and helps the environment.</p>
-          <p><b>Individual Work Area</b></p>
-          <ol>
-            <il>Research into 3 competitors Carpool businesses</il>
-            <il>Take note of their functionalities</il>
-          </ol>
-          <p><b>Understanding our Client</b></p>
-          <p>How many people is going to use the system? To better understand our customer base, we need to understand the different approaches to get information about the users.</p>
-          <p>The role of the user separates into the car provider and the passenger </p>
+          <p><b>Discussed additional Functions we kept in view</b></p>
           <ul>
-            <li>Help a cause that is environmentally friendly.</li>
-            <li>Creating an carpool app like this can be a valid business model.</li>
+            <li>Baby Friendly</li>
+            <li>Credit Card Security</li>
+            <li>Multiple Drop Off</li>
+            <li>Pet</li>
+            <li>Points system</li>
+            <li>Sensitive information encryption</li>
+            <li>Shuttle Service</li>
           </ul>
-          <
+          <p><b>Key Feature</b></p>
+          <ul>
+            <li>Emergency Contact</li>
+            <li>History</li>
+            <li>Profile for passenger and driver</li>
+            <li>Ratings</li>
+            <li>Status of scheduled trip</li>
+            <li>Safety Centre</li>
+          </ul>
+          <p><b>Removed unnecessary functions </b></p>
+          <ul>
+            <li>Accident Detection</li>
+            <li>Bicycle Rental</li>
+            <li>Cancelled Trips</li>
+            <li>E-wallet</li>
+            <li>Hail for a friend </li>
+            <li>Insurance</li>
+            <li>Premium Services</li>
+            <li>Recording</li>
+          </ul>
+          <p><b>9:50pm - Creating a brief description in the App</b></p>
+          <p> We discuss everything that is to be done in-app including messaging services and application to be available to Apple and Android devices. </p>
+          <p><b>Reason </b></p>
+          <p>Exclusive to every students and staff of SIM using any device.
+          Allow everyone to meet each other and knowing someone new.
+          Reduce carbon footprint.
+          Comfortable and faster way to get home as a lower cost.
+          Our application prioritises safety and rest assured;you will be riding with people of the same community.
+          </p>
+          <p><b>First Draft</b></p>
+          <p>
+          Our platform is a carpool application that is available exclusively to students and staff of SIM using both android and apple devices.
+          We care about the environment thus we promote one that reduces carbon footprint and traffic congestion.
+          At the same time,lessen the financial burdens of the driver.
+          Don't ever worry about not having a ride or squeezing with the evening crowd on public transport.
+          Safety is our top priority,therefore, sit back and relax, knowing that you are getting home and reaching school with a member of the same community.
+          </p>
+          <p><b>Company Tagline<p></b>
+          <p>Marketing it in a way to meet different students from other faculties. Lack of females in computer science major? Use our application to meet girls from art major.</p>
+          <p><b>10.00pm - Creating a brief description in the App</b></p>
+          <p>We added and filled up user requirements for the application based on the functionalities we chose,
+          Entities and functions for Passenger,
+          driver and system, rides, payments etc to store their unique IDs and corresponding functions.
+          (ER Database). </p>
+          <p><b>Questions asked during the meeting<p></b>
+          <ul>
+            <li>Are we going to work with SIM Office for this service?</li>
+            <li>Can passengers have a complaint section to give their feedback?</li>
+            <li>Do we need a system admin and someone to monitor the system?</li>
+            <li>Name of the platform?</li>
+            <li>The business model of the platform?</li>
+            <li>Which software development strategy do we use? Scrum/Agile or Waterfall.</li>
+          </ul>
+          <p>
+          We completed our objectives for week 2,
+          Which was to decide which functionalities we want for our final product.
+          We will continue to research to see if we have any other additional functions to add on throughout the development of the platform and after getting feedback with our supervisor.
+          Towards the end of the meeting, we discussed the objectives for the following week which is to continue researching on other functions we potentially miss out before our second meeting with our supervisor.
+          Ensuring we get feedback from our supervisor for our research before making any required changes.
+          </p>
         </div>
       </div>
     </div>
   </article>
+
   <hr>
 
   <!-- Footer -->
